--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -369,4 +369,10 @@
         <item name="android:textAllCaps">true</item>
     </style>
 
+    <style name="Tab2">
+        <item name="android:textStyle">italic</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:textAllCaps">true</item>
+    </style>
+
 </resources>
