--- a/app/src/main/res/layout/job_list_item.xml
+++ b/app/src/main/res/layout/job_list_item.xml
@@ -99,7 +99,9 @@
                 android:id="@+id/job_id"
                 android:textSize="12dp"
                 app:josefin_style="italic"
-                android:layout_gravity="end|right|center_vertical"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
                 android:textColor="@android:color/holo_green_dark"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
