--- a/app/src/main/res/layout/item_role_employer.xml
+++ b/app/src/main/res/layout/item_role_employer.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.hellobaytree.graftrs.employer.createjob.adapter.SquareLayout android:padding="2dp"
+<com.hellobaytree.graftrs.employer.createjob.adapter.SquareLayout
+    android:padding="2dp"
     android:layout_margin="2dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -16,6 +17,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/transparentSquareColor" />
+
+        <ImageView
+            android:visibility="gone"
+            android:id="@+id/blur"
+            android:scaleType="centerCrop"
+            android:background="#80FF0000"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
         <LinearLayout
             android:orientation="vertical"
