--- a/app/src/main/res/layout/activity_cscs.xml
+++ b/app/src/main/res/layout/activity_cscs.xml
@@ -149,7 +149,13 @@
             </LinearLayout>
 
         </LinearLayout>
-
+        <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:id="@+id/error_message"
+            android:padding="10dp"
+            style="@style/body_red_text"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
