--- a/app/src/main/res/layout/fragment_select_experience.xml
+++ b/app/src/main/res/layout/fragment_select_experience.xml
@@ -190,6 +190,11 @@
                             android:layout_height="100dp"
                             android:lines="8"
                             android:text="Please select" />
+                        <ImageView android:layout_width="20dp"
+                            android:layout_toRightOf="@+id/lang"
+                            android:scaleType="fitCenter"
+                            android:layout_height="20dp" android:src="@drawable/ic_arrow_drop_down_black_24dp"/>
+
 
                     </RelativeLayout>
                 </LinearLayout>
@@ -356,6 +361,10 @@
                     android:gravity="start"
                     android:background="@color/lightgraySquareColor"
                     android:padding="20dp">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
                     <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
                         android:textColor="@color/blackSquareColor"
                         android:textSize="14sp"
@@ -363,15 +372,25 @@
                         android:layout_height="match_parent"
                         android:text="@string/onboarding_uploadpic"/>
                     <ImageView
-                        android:id="@+id/avatar"
+                        android:id="@+id/maximize"
+                        android:layout_alignParentRight="true"
+                        android:layout_height="30dp"
+                        android:layout_width="30dp"
+                        android:scaleType="center"
+                        android:adjustViewBounds="true"
+                        android:src="@drawable/maximize" />
+                    </LinearLayout>
+                    <ImageView
+                        android:id="@+id/passport_photo"
                         android:layout_gravity="center"
                         android:background="@color/lightgraySquareColor"
-                        android:layout_width="150dp"
-                        android:layout_height="150dp"
-                        android:layout_margin="20dp"
-                        android:scaleType="centerCrop"
+                        android:layout_width="300dp"
+                        android:layout_height="130dp"
+                        android:layout_margin="5dp"
+                        android:scaleType="center"
                         android:adjustViewBounds="true"
-                        android:src="@drawable/upload_picture" />
+                        android:src="@drawable/passport" />
+
                 </LinearLayout>
             </android.support.v7.widget.CardView>
             <!-- Fluency -->
