--- a/app/src/main/res/layout/dialog_job_applied.xml
+++ b/app/src/main/res/layout/dialog_job_applied.xml
@@ -26,6 +26,7 @@
             android:layout_marginLeft="24dp"
             android:layout_marginRight="24dp"
             android:layout_marginTop="24dp"
+            android:lineSpacingExtra="10dp"
             android:textAlignment="center"
             android:textColor="@android:color/black"
             android:textSize="24sp"
