--- a/app/src/main/res/layout/fragment_job_matches.xml
+++ b/app/src/main/res/layout/fragment_job_matches.xml
@@ -1,7 +1,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <FrameLayout
         android:id="@+id/worker_matches_hint"
@@ -9,31 +10,31 @@
         android:layout_height="wrap_content">
 
         <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
+            style="@style/subheader_white_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/main_worker_advice"
-            android:padding="10dp"
-            style="@style/subheader_white_text"
             android:background="@color/darkSquareColor"
-            android:gravity="center" />
+            android:gravity="center"
+            android:padding="10dp"
+            android:text="@string/main_worker_advice" />
 
         <View
             android:id="@+id/worker_matches_exit_hint"
+            android:layout_width="18dp"
+            android:layout_height="18dp"
             android:layout_gravity="right|top"
             android:layout_margin="16sp"
-            android:background="@drawable/ic_circle_close"
-            android:layout_width="18dp"
-            android:layout_height="18dp"/>
+            android:background="@drawable/ic_circle_close" />
     </FrameLayout>
 
     <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
         android:id="@+id/job_matches_counter"
+        style="@style/subheader_white_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
-        style="@style/subheader_white_text"
         android:background="@color/redSquareColor"
-        android:gravity="center" />
+        android:gravity="center"
+        android:padding="10dp" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/job_matches_recycler_view"
@@ -41,14 +42,36 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:background="@android:color/white"
-        android:scrollbars="vertical"/>
+        android:scrollbars="vertical" />
 
-    <View
-        android:layout_marginTop="80dp"
-        android:layout_marginLeft="24dp"
+    <LinearLayout
         android:id="@+id/no_matches"
-        android:layout_gravity="center"
-        android:background="@drawable/ic_no_matches"
-        android:layout_width="140dp"
-        android:layout_height="120dp"/>
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="80dp"
+            android:lineSpacingExtra="10dp"
+            android:text="@string/worker_no_matches"
+            android:textAlignment="center"
+            android:textColor="@android:color/black"
+            android:textSize="24sp"
+            app:josefin_style="light" />
+
+        <Button
+            android:id="@+id/editProfile"
+            style="@style/BaseButton"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="10dp"
+            android:text="@string/worker_update_profile" />
+    </LinearLayout>
 </LinearLayout>
