--- a/app/src/main/res/layout/fragment_enter_code.xml
+++ b/app/src/main/res/layout/fragment_enter_code.xml
@@ -21,7 +21,7 @@
                 android:gravity="center"
                 style="@style/light_big_dark_text"
                 app:josefin_style="light"
-                android:paddingBottom="15dp"
+                android:paddingBottom="20dp"
                 android:text="@string/phone_verification_thanks" />
 
             <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
@@ -29,6 +29,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
+                android:lineSpacingExtra="10dp"
                 style="@style/body_dark_text"
                 android:padding="10dp" />
 
