--- a/app/src/main/res/layout/item_job_emp.xml
+++ b/app/src/main/res/layout/item_job_emp.xml
@@ -26,13 +26,27 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
+                <!-- Company Name -->
+                <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
+                    android:id="@+id/item_job_company_name"
+                    android:textColor="@color/redSquareColor"
+                    android:textSize="12sp"
+                    android:layout_marginTop="14dp"
+                    android:layout_marginLeft="14dp"
+                    android:layout_marginBottom="6dp"
+                    app:josefin_style="italic"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
                 <!-- Company Logo -->
                 <ImageView
-                    android:visibility="gone"
+                    android:scaleType="centerCrop"
+                    android:layout_below="@+id/item_job_company_name"
+                    android:background="@color/black_overlay"
                     android:id="@+id/item_job_logo"
                     android:layout_width="78dp"
                     android:layout_height="42dp"
-                    android:layout_margin="14dp" />
+                    android:layout_marginLeft="14dp" />
 
                 <!-- Occupation + experience -->
                 <LinearLayout
@@ -66,7 +80,7 @@
 
                 <!-- Salary-->
                 <LinearLayout
-                    android:layout_below="@+id/occupation_experience"
+                    android:layout_below="@+id/item_job_company_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
@@ -123,6 +137,15 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/item_match_job"
                 android:padding="14dp">
+
+                <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
+                    android:id="@+id/item_job_id"
+                    android:textSize="12dp"
+                    app:josefin_style="italic"
+                    android:layout_gravity="end|right|center_vertical"
+                    android:textColor="@android:color/holo_green_dark"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
