--- a/app/src/main/res/layout/popup_passport_image.xml
+++ b/app/src/main/res/layout/popup_passport_image.xml
@@ -8,6 +8,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="15dp">
+        <ImageButton
+            android:layout_height="wrap_content"
+            android:id="@+id/passport_preview_close"
+            android:layout_width="wrap_content"
+            android:layout_gravity="top|right"
+            android:background="@color/whiteSquareColor"
+            android:src="@drawable/ic_clear_black_24dp"
+            android:tint="@color/redSquareColor"
+            />
     <ImageView android:layout_width="match_parent"
         android:id="@+id/original_image"
         android:layout_gravity="center"
