sc337 icon replacement

--- a/app/src/main/res/layout/item_role_employer.xml
+++ b/app/src/main/res/layout/item_role_employer.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <!-- The Image -->
         <ImageView
             android:id="@+id/image"
             android:scaleType="centerCrop"
@@ -18,6 +19,7 @@
             android:layout_height="match_parent"
             android:background="@color/transparentSquareColor" />
 
+        <!-- The Blur -->
         <ImageView
             android:visibility="gone"
             android:id="@+id/blur"
@@ -32,6 +34,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+            <!-- The Title -->
             <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
                 android:id="@+id/title"
                 android:textSize="18sp"
@@ -52,7 +55,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
 
-
                 <LinearLayout
                     android:layout_gravity="center"
                     android:layout_marginTop="6dp"
@@ -61,28 +63,22 @@
                     android:layout_height="wrap_content">
 
                     <FrameLayout
+                        android:layout_gravity="center_vertical"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content">
 
                         <View
-                            android:layout_gravity="center"
-                            android:background="@android:color/white"
-                            android:layout_width="16dp"
-                            android:layout_height="16dp"/>
-
-                        <View
                             android:id="@+id/minus"
-                            android:layout_margin="1dp"
-                            android:background="@drawable/ic_minus"
-                            android:layout_width="46dp"
-                            android:layout_height="46dp"/>
+                            android:background="@drawable/ic_minus2"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"/>
                     </FrameLayout>
 
                     <FrameLayout
                         android:layout_margin="1dp"
                         android:background="@drawable/ic_blank_circle"
-                        android:layout_width="46dp"
-                        android:layout_height="46dp">
+                        android:layout_width="44dp"
+                        android:layout_height="44dp">
 
                         <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
                             android:text="1"
@@ -95,20 +91,15 @@
                     </FrameLayout>
 
                     <FrameLayout
+                        android:layout_gravity="center_vertical"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content">
 
                         <View
-                            android:layout_gravity="center"
-                            android:background="@android:color/white"
-                            android:layout_width="16dp"
-                            android:layout_height="16dp"/>
-                        <View
                             android:id="@+id/plus"
-                            android:layout_margin="1dp"
-                            android:background="@drawable/ic_plus"
-                            android:layout_width="46dp"
-                            android:layout_height="46dp"/>
+                            android:background="@drawable/ic_plus2"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"/>
                     </FrameLayout>
                 </LinearLayout>
             </LinearLayout>
