--- a/app/src/main/res/layout/item_match.xml
+++ b/app/src/main/res/layout/item_match.xml
@@ -1,158 +1,190 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:layout_margin="6dp"
-    card_view:cardCornerRadius="1dp"
-    card_view:cardElevation="2dp"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="200dp">
+    android:layout_height="wrap_content"
+    android:layout_margin="6dp"
+    android:orientation="vertical"
+    card_view:cardCornerRadius="1dp"
+    card_view:cardElevation="2dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-
         <!-- Top Block -->
-        <FrameLayout
-            android:minHeight="140dp"
+        <RelativeLayout
             android:id="@+id/item_match_job"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <!-- Company Logo -->
-            <ImageView
-                android:id="@+id/match_logo"
-                android:layout_margin="14dp"
-                android:layout_width="78dp"
-                android:layout_height="42dp"/>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:id="@+id/companyInfo">
+
+                <!-- Company Name -->
+                <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
+                    android:id="@+id/item_job_company_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="6dp"
+                    android:layout_marginLeft="14dp"
+                    android:layout_marginTop="14dp"
+                    android:textColor="@color/redSquareColor"
+                    android:textSize="12sp"
+                    app:josefin_style="italic" />
+
+                <!-- Company Logo -->
+                <ImageView
+                    android:id="@+id/match_logo"
+                    android:layout_width="78dp"
+                    android:background="@color/black_overlay"
+                    android:layout_height="42dp"
+                    android:layout_margin="14dp" />
+            </LinearLayout>
 
             <!-- Like Image -->
             <ImageView
                 android:id="@+id/likeImage"
-                android:layout_gravity="end|right|top"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:padding="14dp"
                 android:src="@drawable/ic_like"
                 android:tint="@color/redSquareColor"
-                android:padding="14dp"
-                android:layout_width="60dp"
-                android:layout_height="60dp"/>
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true" />
 
             <!-- Occupation + experience -->
             <LinearLayout
-                android:orientation="vertical"
-                android:layout_margin="14dp"
-                android:layout_gravity="bottom|start|left"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_margin="14dp"
+                android:orientation="vertical"
+                android:layout_below="@id/companyInfo">
 
                 <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
                     android:id="@+id/worker_details_occupation"
-                    android:textSize="20sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:text="Bricklayer"
                     android:textAllCaps="true"
-                    app:josefin_style="light"
                     android:textColor="@color/redSquareColor"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:textSize="20sp"
+                    app:josefin_style="light" />
 
                 <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
                     android:id="@+id/worker_details_experience"
-                    android:textSize="16sp"
-                    app:josefin_style="light"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:text="6 years experience"
                     android:textAllCaps="true"
                     android:textColor="@color/blackSquareColor"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:textSize="16sp"
+                    app:josefin_style="light" />
             </LinearLayout>
 
             <!-- Salary-->
             <LinearLayout
-                android:orientation="vertical"
-                android:layout_margin="14dp"
-                android:layout_gravity="bottom|end|right"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_margin="14dp"
+                android:orientation="vertical"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true">
 
                 <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
                     android:id="@+id/worker_details_salary_period"
-                    android:textSize="16sp"
-                    app:josefin_style="light"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:textAllCaps="true"
                     android:textColor="@color/redSquareColor"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:textSize="16sp"
+                    app:josefin_style="light" />
 
                 <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
                     android:id="@+id/worker_details_salary_number"
-                    android:textSize="22sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:text="\u00A3 165"
-                    app:josefin_style="light"
                     android:textAllCaps="true"
                     android:textColor="@color/redSquareColor"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:textSize="22sp"
+                    app:josefin_style="light" />
             </LinearLayout>
-        </FrameLayout>
+        </RelativeLayout>
 
         <!-- Location and Start Date -->
-        <FrameLayout
-            android:padding="14dp"
-            android:layout_below="@+id/item_match_job"
+        <RelativeLayout
             android:id="@+id/item_match_start_location"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/item_match_job"
+            android:padding="14dp">
+
+            <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
+                android:id="@+id/job_id"
+                android:textSize="12dp"
+                app:josefin_style="italic"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:textColor="@android:color/holo_green_dark"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="center_vertical">
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:tint="@color/redSquareColor"
-                    android:src="@drawable/ic_date_range_black_24dp"/>
+                    android:src="@drawable/ic_date_range_black_24dp"
+                    android:tint="@color/redSquareColor" />
 
                 <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
                     android:id="@+id/item_match_start_date"
+                    style="@style/caption_gray_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginEnd="15dp"
+                    android:layout_marginRight="15dp"
                     android:gravity="center"
-                    style="@style/caption_gray_text"
-                    app:josefin_style="light"
                     android:paddingLeft="5dp"
                     android:paddingStart="5dp"
-                    android:layout_marginRight="15dp"
-                    android:layout_marginEnd="15dp" />
+                    app:josefin_style="light" />
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:tint="@color/redSquareColor"
                     android:layout_marginLeft="5dp"
                     android:layout_marginStart="5dp"
-                    android:src="@drawable/ic_place_black_24dp"/>
+                    android:src="@drawable/ic_place_black_24dp"
+                    android:tint="@color/redSquareColor" />
 
                 <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
                     android:id="@+id/item_match_location"
+                    style="@style/caption_gray_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    style="@style/caption_gray_text"
-                    app:josefin_style="light"
                     android:paddingLeft="5dp"
                     android:paddingStart="5dp"
-                    android:text="Holborn, London"/>
+                    android:text="Holborn, London"
+                    app:josefin_style="light" />
             </LinearLayout>
-        </FrameLayout>
+        </RelativeLayout>
     </RelativeLayout>
 
-    <View android:layout_gravity="bottom"
-        android:background="@color/redSquareColor"
+    <View
         android:layout_width="match_parent"
-        android:layout_height="4dp"/>
+        android:layout_height="4dp"
+        android:background="@color/redSquareColor"
+        android:layout_gravity="bottom" />
 </android.support.v7.widget.CardView>
