--- a/app/src/main/res/layout/fragment_worker_profile.xml
+++ b/app/src/main/res/layout/fragment_worker_profile.xml
@@ -153,6 +153,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp"/>
 
+            <include layout="@layout/cscs_worker"/>
+
+            <View android:layout_gravity="bottom"
+                android:background="@android:color/darker_gray"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"/>
+
+
             <RelativeLayout
                 android:orientation="vertical"
                 android:layout_margin="14dp"
