--- a/app/src/main/res/layout/activity_request_review.xml
+++ b/app/src/main/res/layout/activity_request_review.xml
@@ -15,18 +15,22 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <ImageView
+            <ImageButton
                 android:id="@+id/close"
-                android:layout_margin="12dp"
-                android:background="@drawable/ic_close"
+                android:layout_margin="15dp"
+                android:src="@drawable/ic_clear_black_24dp"
+                android:tint="@color/redSquareColor"
+                android:background="@color/whiteSquareColor"
                 android:layout_width="30dp"
                 android:layout_height="30dp"/>
 
             <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
                 android:layout_gravity="center"
                 android:text="@string/worker_request_review"
-                android:textSize="24sp"
-                android:textColor="@color/graySquareColor"
+                android:textSize="26sp"
+                app:josefin_style="light"
+                android:textColor="@color/blackSquareColor"
+                android:layout_marginBottom="12dp"
                 android:textAlignment="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
@@ -35,6 +39,7 @@
                 card_view:elevation="2dp"
                 card_view:cardCornerRadius="1dp"
                 android:layout_margin="4dp"
+                card_view:cardBackgroundColor="@color/lightgraySquareColor"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -48,6 +53,7 @@
                         android:text="@string/worker_request_review_first_name"
                         app:josefin_style="italic"
                         android:layout_marginTop="18dp"
+                        style="@style/body_dark_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
 
@@ -55,11 +61,13 @@
                         android:layout_width="match_parent"
                         android:layout_marginTop="4dp"
                         android:id="@+id/get_first"
+                        style="@style/square_edit_text"
                         android:layout_height="wrap_content"/>
 
                     <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
                         android:text="@string/worker_request_review_last_name"
                         app:josefin_style="italic"
+                        style="@style/body_dark_text"
                         android:layout_marginTop="18dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
@@ -68,12 +76,14 @@
                         android:layout_width="match_parent"
                         android:layout_marginTop="4dp"
                         android:id="@+id/get_last"
+                        style="@style/square_edit_text"
                         android:layout_height="wrap_content"/>
 
                     <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
                         android:text="@string/worker_request_email"
                         app:josefin_style="italic"
                         android:layout_marginTop="18dp"
+                        style="@style/body_dark_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
 
@@ -81,12 +91,14 @@
                         android:layout_width="match_parent"
                         android:layout_marginTop="4dp"
                         android:inputType="textEmailAddress"
+                        style="@style/square_edit_text"
                         android:id="@+id/get_email"
                         android:layout_height="wrap_content"/>
 
                     <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
                         android:text="@string/worker_request_mobile"
                         app:josefin_style="italic"
+                        style="@style/body_dark_text"
                         android:layout_marginTop="18dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
@@ -94,6 +106,7 @@
                     <com.hellobaytree.graftrs.shared.view.widget.JosefinSansEditText
                         android:layout_width="match_parent"
                         android:layout_marginTop="4dp"
+                        style="@style/square_edit_text"
                         android:inputType="phone"
                         android:id="@+id/get_mobile"
                         android:layout_height="wrap_content"/>
@@ -101,6 +114,7 @@
                     <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
                         android:text="@string/worker_request_company"
                         app:josefin_style="italic"
+                        style="@style/body_dark_text"
                         android:layout_marginTop="18dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
@@ -108,12 +122,14 @@
                     <com.hellobaytree.graftrs.shared.view.widget.JosefinSansEditText
                         android:layout_width="match_parent"
                         android:layout_marginTop="4dp"
+                        style="@style/square_edit_text"
                         android:id="@+id/get_company"
                         android:layout_height="wrap_content"/>
 
                     <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
                         android:text="@string/worker_request_date"
                         app:josefin_style="italic"
+                        style="@style/body_dark_text"
                         android:layout_marginTop="18dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
@@ -121,6 +137,7 @@
                     <com.hellobaytree.graftrs.shared.view.widget.JosefinSansEditText
                         android:layout_width="match_parent"
                         android:layout_marginTop="4dp"
+                        style="@style/square_edit_text"
                         android:id="@+id/get_date"
                         android:layout_height="wrap_content"/>
 
@@ -128,6 +145,7 @@
                         android:text="@string/worker_request_error"
                         android:id="@+id/err"
                         android:visibility="gone"
+                        style="@style/body_dark_text"
                         android:layout_marginTop="12dp"
                         android:textColor="@color/redSquareColor"
                         app:josefin_style="italic"
@@ -145,7 +163,7 @@
 
                 <Button
                     android:id="@+id/cancel"
-                    android:background="#ededed"
+                    android:background="@color/redSquareColor"
                     android:elevation="4dp"
                     android:layout_margin="4dp"
                     android:layout_weight="1"
