--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -11,7 +11,8 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        <android.support.v7.widget.CardView
+            xmlns:card_view="http://schemas.android.com/apk/res-auto"
             android:id="@+id/phone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -157,11 +158,11 @@
                     android:background="@android:color/darker_gray" />
 
                 <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
-                    android:id="@+id/my_subscriptions"
+                    android:id="@+id/my_security"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="12dp"
-                    android:text="@string/employer_settings_my_subscriptions"
+                    android:text="@string/employer_settings_security"
                     android:textSize="16sp"
                     app:josefin_style="italic" />
 
