--- a/app/src/main/res/layout/fragment_worker_jobs.xml
+++ b/app/src/main/res/layout/fragment_worker_jobs.xml
@@ -1,31 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <HorizontalScrollView
-        android:id="@+id/a"
-        android:scrollbars="none"
+    <android.support.design.widget.TabLayout
+        android:id="@+id/worker_jobs_tablayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <android.support.design.widget.TabLayout
-            android:id="@+id/worker_jobs_tablayout"
-            app:tabMode="fixed"
-            app:tabGravity="fill"
-            android:background="@color/whiteSquareColor"
-            app:tabIndicatorColor="@color/redSquareColor"
-            app:tabSelectedTextColor="@color/redSquareColor"
-            app:tabTextColor="@color/redSquareColor"
-            app:tabTextAppearance="@style/Tab"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-    </HorizontalScrollView>
+        android:layout_height="wrap_content"
+        android:background="@color/whiteSquareColor"
+        app:tabGravity="fill"
+        app:tabIndicatorColor="@color/redSquareColor"
+        app:tabMode="fixed"
+        app:tabSelectedTextColor="@color/redSquareColor"
+        app:tabTextAppearance="@style/Tab"
+        app:tabTextColor="@color/redSquareColor" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/worker_jobs_pager"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content" />
 </LinearLayout>
