--- a/app/src/main/res/layout/item_role_employer.xml
+++ b/app/src/main/res/layout/item_role_employer.xml
@@ -8,6 +8,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <RelativeLayout
+        android:background="@android:color/darker_gray"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
