--- a/app/src/main/res/layout/fragment_verify_phone.xml
+++ b/app/src/main/res/layout/fragment_verify_phone.xml
@@ -42,7 +42,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:defaultNameCode="GB"
-                app:keyboardAutoPopOnSearch="false"/>
+                app:keyboardAutoPopOnSearch="true"/>
 
 
             <android.support.design.widget.TextInputLayout
